--- a/.github/workflows/environments-secrets.yml
+++ b/.github/workflows/environments-secrets.yml
@@ -86,3 +86,21 @@ jobs:
 
       - name: Step that uses the PROD environment
         run: echo "Deployment to ${{ env.PROD_URL }}..."
+
+  use-secrets:
+    name: Use secrets
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    steps:
+      - name: Hello world action with secrets
+        uses: actions/hello-world-javascript-action@v1
+        with: # Set the secret as an input
+          who-to-greet: ${{ secrets.MY_REPO_SECRET }}
+        env: # Or as an environment variable
+          super_secret: ${{ secrets.MY_REPO_SECRET }}
+      - name: Echo secret is redacted in the logs
+        run: |
+          echo Env secret is ${{ secrets.MY_REPO_SECRET }}
+          echo Warning: GitHub automatically redacts secrets printed to the log, 
+          echo          but you should avoid printing secrets to the log intentionally.
+          echo ${{ secrets.MY_REPO_SECRET }} | sed 's/./& /g'
