--- a/.github/workflows/job-dependencies.yml
+++ b/.github/workflows/job-dependencies.yml
@@ -1,10 +1,8 @@
 name: 02-2. Dependencies 
 
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
+  workflow_call:
+  
 jobs:
   initial:
     runs-on: ubuntu-latest
